Dummy_Package_for_scratch_org/main/default/objects/Test_Run_Step__c/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <formula>Script_Step__r.Action_Description__c</formula>
    <label>Action/Description</label>
    <type>Text</type>
</CustomField>