Dummy_Package_for_scratch_org/main/default/objects/Test_Run_Step__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <formula>Script_Step__r.Expected_Result__c</formula>
    <label>Expected Result</label>
    <type>Text</type>
</CustomField>