Dummy_Package_for_scratch_org/main/default/objects/Test_Run_Step__c/fields/Guidance_notes__c.field-meta.xml
<CustomField>
    <fullName>Guidance_notes__c</fullName>
    <formula>Script_Step__r.Guidance_notes__c</formula>
    <label>Guidance notes</label>
    <type>Text</type>
</CustomField>