Dummy_Package_for_scratch_org/main/default/objects/Test_Run_Step__c/fields/Script_Step__c.field-meta.xml
<CustomField>
    <fullName>Script_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Script Step</label>
    <referenceTo>Test_Script_Step__c</referenceTo>
    <relationshipLabel>Test Run Steps</relationshipLabel>
    <relationshipName>Test_Script_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>