Dummy_Package_for_scratch_org/main/default/objects/Test_Run_Step__c/fields/Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Test_Run__c</fullName>
    <label>Test Run</label>
    <referenceTo>Test_Run__c</referenceTo>
    <relationshipLabel>Test Run Steps</relationshipLabel>
    <relationshipName>Test_Run_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>